--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.19",
         "axios": "^1.6.4",
+        "inputmask": "^5.0.9",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.38",
         "tailwindcss": "^3.4.4",
